# swagger.yaml
@@ -46,8 +46,6 @@ paths:
             schema: # Request body contents
               type: object
               properties:
-                username:
-                  type: string
                 email:
                   type: string
                 password:
@@ -55,7 +53,6 @@ paths:
                 confirm_password:
                   type: string
               example: # Sample object
-                username: dedens777
                 email: dedensetyawan17@gmail.com
                 password: deden123
                 confirm_password: deden123
@@ -203,7 +200,7 @@ paths:
                   data:
                     type: object
                     properties:
-                      emailOrUsername:
+                      email:
                         type: string
                       token:
                         type: string
@@ -213,7 +210,7 @@ paths:
                     status: true
                     message: login success!
                     data:
-                      emailOrUsername: dedensetyawan17@gmail.com
+                      email: dedensetyawan17@gmail.com
                       token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiZW1haWwiOiJkZWRlbnNldHlhd2FuMTdAZ21haWwuY29tIiwicm9sZSI6IkJVWUVSIiwiaWF0IjoxNjY5NDYwNTg0LCJleHAiOjE2Njk0NjQxODR9.UpEBOEZ4sVQfWhtzsdcJRUoJyROBVl8z6W528rMtYaY
         "400":
           description: Bad Request
